Fix test instabilities and clean up (CORE-763,CORE-768)
Fixes up issues in jaxrs-base-server module tests where new tests around
Security Plugin API uncovered a test harness isolation issue with
MockKeyServer.

Also made some further improvements to security-plugin-rdf-abac module
based on using newer APIs from RDF ABAC 1.0.0